[gd_scene load_steps=3 format=2]

[ext_resource path="res://Data/Texture/252f10935edda2dd3bd352c4c764b4e8.jpg" type="Texture" id=1]
[ext_resource path="res://Entity/Scene1/Scene1.gd" type="Script" id=2]

[node name="Scene1" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.768305, 0.695187 )
texture = ExtResource( 1 )

[node name="Spawnpoints" type="Node2D" parent="."]

[node name="Pos1" type="Position2D" parent="Spawnpoints"]
position = Vector2( -499, 53 )

[node name="Pos2" type="Position2D" parent="Spawnpoints"]
position = Vector2( -499, 146 )

[node name="Pos3" type="Position2D" parent="Spawnpoints"]
position = Vector2( 499, 52 )

[node name="Pos4" type="Position2D" parent="Spawnpoints"]
position = Vector2( 497, 123 )

[node name="Bear_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Woodman_spawn_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Bear_spawn_timer" to="." method="_on_Bear_spawn_timer_timeout"]
[connection signal="timeout" from="Woodman_spawn_timer" to="." method="_on_Woodman_spawn_timer_timeout"]
